# cVISA

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cVISA.code-workspace
cvisa/: AGENTS.md  CMakeLists.txt  README.md
cvisa/examples/: basic_usage.cpp
cvisa/include/: visa.h
cvisa/src/: Command.hpp  IVisaIo.hpp  InstrumentDriver.hpp  VisaInstrument.cpp  VisaInstrument.hpp  VisaInterface.cpp  VisaInterface.hpp  exceptions.cpp
cvisa/src/drivers/: Agilent66xxA.cpp  Agilent66xxA.hpp  PowerSupply.cpp  PowerSupply.hpp
examples/: agilent66xxa_usage.cpp  basic_usage.cpp  ta5000_usage.cpp
include/: visa.h
src/: Command.hpp  InstrumentDriver.cpp  InstrumentDriver.hpp  VisaInterface.cpp  VisaInterface.hpp  exceptions.cpp  exceptions.hpp  utils.cpp  utils.hpp
src/core/: Command.hpp  InstrumentDriver.cpp  InstrumentDriver.hpp  Logger.hpp  SCPIBase.cpp  SCPIBase.hpp  SCPICommand.hpp  VISACom.cpp  VISACom.hpp  VisaInterface.cpp  VisaInterface.hpp  exceptions.cpp  exceptions.hpp
src/drivers/: Agilent66xxA.cpp  Agilent66xxA.hpp  PowerSupply.cpp  PowerSupply.hpp  ThermalAirTA5000.cpp  ThermalAirTA5000.hpp
src/utils/: utils.hpp
